# llm_math_book

./: .gitignore  Dockerfile  LICENSE  README.md  colab_setup.sh  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: mini_korean.txt
docs/: math_code_mapping.md
en/: README.md
en/benchmarks/: bench_attention.py  bench_backprop.py  bench_gpt_sizes.py  bench_kv_cache.py  bench_lora.py  bench_matmul.py  bench_mha_gqa.py  bench_nano_gpt.py  bench_optimizer.py  bench_qlora_inference.py  bench_quantization.py  bench_rlhf.py  bench_tokenizer.py  bench_training_loop.py
en/notebooks/: ch00_getting_started.ipynb  ch01_vectors_and_spaces.ipynb  ch02_matrices.ipynb  ch03_calculus_optimization.ipynb  ch04_probability_statistics.ipynb  ch05_information_theory.ipynb  ch06_perceptron_mlp.ipynb  ch07_backpropagation.ipynb  ch08_activation_loss.ipynb  ch09_optimization.ipynb  ch10_regularization.ipynb  ch11_rnn_lstm.ipynb  ch12_tokenizers.ipynb  ch13_embeddings.ipynb  ch14_attention_mechanism.ipynb  ch15_multi_head_attention.ipynb  ch16_positional_encoding.ipynb  ch17_transformer_architecture.ipynb  ch18_gpt_anatomy.ipynb  ch19_pretraining.ipynb  ch20_sft.ipynb  ch21_rlhf.ipynb  ch22_dpo.ipynb  ch23_kv_cache.ipynb  ch24_decoding_strategies.ipynb  ch25_quantization.ipynb  ch26_lora_pruning.ipynb  ch27_flash_attention.ipynb  ch28_data_parallel.ipynb  ch29_tensor_pipeline_parallel.ipynb  (+3 more)
jp/: README.md
ko/: README.md
scripts/: check_notebook_syntax.py  check_release_placeholders.py  run_benchmarks.py  run_notebooks.py
(+199 files in other folders)
