[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-math"
version = "0.1.2"
description = "Shared utilities and runnable exercises for LLM Math Book"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24,<2",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "pandas>=2.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "nbformat>=5.9",
    "tokenizers>=0.15",
    "torch>=2.0",
    "transformers>=4.36",
]
advanced = [
    "transformers>=4.36",
    "datasets>=2.14",
    "peft>=0.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyright>=1.1.390",
    "nbformat>=5.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E701", "E702"]

[tool.pyright]
include = [
    "src/llm_math/reference.py",
    "src/llm_math/experiments",
    "tests",
    "scripts",
]
exclude = [".venv", "venv"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnsupportedDunderAll = false
venvPath = "."
venv = ".venv"
